--- a/src/kits/abyss/components/Tabs/Tabs.css
+++ b/src/kits/abyss/components/Tabs/Tabs.css
@@ -23,6 +23,7 @@
   .abyss-tabs__list {
     overflow-x: auto;
     scrollbar-width: auto;
+    scrollbar-color: auto;
     padding-bottom: var(--abyss-space-2);
     margin-bottom: calc(var(--abyss-space-2) * -1);
   }
