--- a/src/kits/brass/components/NavigationMenu/NavigationMenu.css
+++ b/src/kits/brass/components/NavigationMenu/NavigationMenu.css
@@ -146,6 +146,7 @@
     overflow-x: auto;
     flex-wrap: nowrap;
     scrollbar-width: auto;
+    scrollbar-color: auto;
   }
   .brass-navmenu__list::-webkit-scrollbar {
     height: 6px;
