--- a/src/kits/nova/components/NavigationMenu/NavigationMenu.css
+++ b/src/kits/nova/components/NavigationMenu/NavigationMenu.css
@@ -177,6 +177,7 @@
     overflow-x: auto;
     flex-wrap: nowrap;
     scrollbar-width: auto;
+    scrollbar-color: auto;
   }
   .nova-navmenu__list::-webkit-scrollbar {
     height: 6px;
